mlx5: Introduce mlx5dv_wr_memcpy builder
Introduce mlx5dv_wr_memcpy to be used for building a DMA memcpy request.

DMA memcpy is one of several Memory to Memory Offloads (MMO) available
from BlueField-2 onwards. It utilizes the GGA modules on the DPU to
perform DMA memcpy from src to dest, thus improving performance.

The src and dest can be any combination of Host and SoC. Note that in
the case of Host to SoC or SoC to Host memcpy, a special cross-gvmi MKey
is needed.

Signed-off-by: Mark Zhang <markzhang@nvidia.com>
Signed-off-by: Avihai Horon <avihaih@nvidia.com>
Signed-off-by: Yishai Hadas <yishaih@nvidia.com>

--- a/providers/mlx5/man/mlx5dv_query_device.3
+++ b/providers/mlx5/man/mlx5dv_query_device.3
@@ -60,6 +60,7 @@ uint32_t        flow_action_flags; /* use enum mlx5dv_flow_action_cap_flags */
 uint32_t        dc_odp_caps; /* use enum ibv_odp_transport_cap_bits */
 void		*hca_core_clock; /* points to a memory location that is mapped to the HCA's core clock */
 struct mlx5dv_sig_caps sig_caps;
+size_t max_wr_memcpy_length; /* max length that is supported by the DMA memcpy WR */
 .in -8
 };
 
@@ -98,6 +99,7 @@ MLX5DV_CONTEXT_MASK_HCA_CORE_CLOCK      = 1 << 8,
 MLX5DV_CONTEXT_MASK_NUM_LAG_PORTS       = 1 << 9,
 MLX5DV_CONTEXT_MASK_SIGNATURE_OFFLOAD   = 1 << 10,
 MLX5DV_CONTEXT_MASK_DCI_STREAMS         = 1 << 11,
+MLX5DV_CONTEXT_MASK_WR_MEMCPY_LENGTH    = 1 << 12,
 .in -8
 };
 
