--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+rdma-core (38.0-1) unstable; urgency=medium
+
+  * New upstream release.
+  * debian: Add __verbs_log to private libibverbs symbols
+
+ -- Benjamin Drung <benjamin.drung@ionos.com>  Fri, 19 Nov 2021 17:57:18 +0100
+
 rdma-core (36.0-2) unstable; urgency=medium
 
   * Revert installing systemd services in /usr/lib/systemd/system.
