--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rdma-core (34.5-1) unstable; urgency=low
+
+  * New upstream release.
+
+ -- Nicolas Morey-Chaisemartin <nmoreychaisemartin@suse.com>  Mon, 28 Mar 2022 10:13:09 +0200
+
 rdma-core (34.4-1) unstable; urgency=low
 
   * New upstream release.
