--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+rdma-core (40.0-1) unstable; urgency=medium
+
+  [ Benjamin Drung ]
+  * New upstream release.
+  * Update my email address to @ubuntu.com
+
+  [ Heinrich Schuchardt ]
+  * Add riscv64 to COHERENT_DMA_ARCHS
+
+ -- Benjamin Drung <bdrung@ubuntu.com>  Mon, 16 May 2022 13:55:12 +0200
+
 rdma-core (39.0-1) unstable; urgency=medium
 
   * New upstream release.
