mlx5: Add new AES-XTS single block capability
Due to a HW bug, there is a need to differentiate between AES-XTS single
block encryption support and multi block encryption support.

Therefore, add the following AES-XTS capability:
MLX5DV_CRYPTO_ENGINES_CAP_AES_XTS_SINGLE_BLOCK.

The old AES-XTS capability MLX5DV_CRYPTO_ENGINES_CAP_AES_XTS, which does
not differentiate between single and multi block encryption, is
deprecated and will not be set anymore.

As an alternative, MLX5DV_CRYPTO_ENGINES_CAP_AES_XTS_SINGLE_BLOCK will
be set on devices that supported MLX5DV_CRYPTO_ENGINES_CAP_AES_XTS.

As part of this patch, add man page explanation about the said
capabilities and check the new capabilities in the code.

Signed-off-by: Maher Sanalla <msanalla@nvidia.com>
Reviewed-by: Avihai Horon <avihaih@nvidia.com>
Signed-off-by: Yishai Hadas <yishaih@nvidia.com>

--- a/providers/mlx5/man/mlx5dv_query_device.3
+++ b/providers/mlx5/man/mlx5dv_query_device.3
@@ -197,9 +197,16 @@ uint32_t flags; /* use enum mlx5dv_crypto_caps_flags */
 .in -8
 };
 
+/* This bitmap indicates which crypto engines are supported by the device. */
 enum mlx5dv_crypto_engines_caps {
 .in +8
+	/* Deprecated, replaced by MLX5DV_CRYPTO_ENGINES_CAP_AES_XTS_SINGLE_BLOCK */
 	MLX5DV_CRYPTO_ENGINES_CAP_AES_XTS = 1 << 0,
+	/*
+	 * Indicates that AES-XTS only supports encrypting a single block
+	 * at a time.
+	 */
+	MLX5DV_CRYPTO_ENGINES_CAP_AES_XTS_SINGLE_BLOCK = 1 << 1,
 .in -8
 };
 
