--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rdma-core (39.2-1) unstable; urgency=low
+
+  * New upstream release.
+
+ -- Nicolas Morey-Chaisemartin <nmoreychaisemartin@suse.com>  Mon, 24 Oct 2022 10:25:03 +0200
+
 rdma-core (39.1-1) unstable; urgency=low
 
   * New upstream release.
