--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+rdma-core (44.0-1) unstable; urgency=medium
+
+  * New upstream release.
+    - Add Microsoft Azure Network Adapter (MANA) RDMA provider
+    - util: mmio: fix build on MIPS with binutils >= 2.35
+  * Add 64-bit MIPS architectures to COHERENT_DMA_ARCHS (Closes: #1026088)
+  * debian/watch: Query api.github.com for release tarballs
+
+ -- Benjamin Drung <bdrung@ubuntu.com>  Tue, 03 Jan 2023 17:29:32 +0100
+
 rdma-core (43.0-1) unstable; urgency=medium
 
   * New upstream release.
