--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+rdma-core (44.0-2) unstable; urgency=medium
+
+  * debian: Add 32-bit MIPS architectures to COHERENT_DMA_ARCHS and
+    inverse the list to NON_COHERENT_DMA_ARCHS (Closes: #1026088)
+
+ -- Benjamin Drung <bdrung@ubuntu.com>  Tue, 10 Jan 2023 13:59:10 +0100
+
 rdma-core (44.0-1) unstable; urgency=medium
 
   * New upstream release.
