--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rdma-core (27.9-1) unstable; urgency=low
+
+  * New upstream release.
+
+ -- Nicolas Morey <nmorey@suse.com>  Mon, 20 Mar 2023 09:37:09 +0100
+
 rdma-core (27.8-1) unstable; urgency=low
 
   * New upstream release.
