--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rdma-core (36.6-1) unstable; urgency=low
+
+  * New upstream release.
+
+ -- Nicolas Morey <nmorey@suse.com>  Mon, 20 Mar 2023 09:37:15 +0100
+
 rdma-core (36.5-1) unstable; urgency=low
 
   * New upstream release.
