--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rdma-core (44.1-1) unstable; urgency=low
+
+  * New upstream release.
+
+ -- Nicolas Morey <nmorey@suse.com>  Mon, 20 Mar 2023 09:37:24 +0100
+
 rdma-core (44.0-1) unstable; urgency=medium
 
   * New upstream release.
