mlx5: Expose max remote atomic/rdma read for DC
Expose maximum number of outstanding RDMA read/atomic per DC QP as a
requester or a responder.
So far we had the same value for both RC and DC and we report only the
value for RC QPs. Now, in some HW we have different RC and DC
limitations and users should use the appropriate values.

Signed-off-by: Or Har-Toov <ohartoov@nvidia.com>
Reviewed-by: Michael Guralnik <michaelgur@nvidia.com>
Signed-off-by: Yishai Hadas <yishaih@nvidia.com>

--- a/providers/mlx5/man/mlx5dv_query_device.3
+++ b/providers/mlx5/man/mlx5dv_query_device.3
@@ -62,6 +62,8 @@ void		*hca_core_clock; /* points to a memory location that is mapped to the HCA'
 struct mlx5dv_sig_caps sig_caps;
 size_t max_wr_memcpy_length; /* max length that is supported by the DMA memcpy WR */
 struct mlx5dv_crypto_caps crypto_caps;
+uint64_t max_dc_rd_atom; /* Maximum number of outstanding RDMA read/atomic per DC QP as a requester */
+uint64_t max_dc_init_rd_atom; /* Maximum number of outstanding RDMA read/atomic per DC QP as a responder */
 .in -8
 };
 
