--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rdma-core (33.9-1) unstable; urgency=low
+
+  * New upstream release.
+
+ -- Nicolas Morey <nmorey@suse.com>  Fri, 09 Jun 2023 11:52:05 +0200
+
 rdma-core (33.8-1) unstable; urgency=low
 
   * New upstream release.
