--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rdma-core (42.3-1) unstable; urgency=low
+
+  * New upstream release.
+
+ -- Nicolas Morey <nmorey@suse.com>  Fri, 09 Jun 2023 11:52:08 +0200
+
 rdma-core (42.2-1) unstable; urgency=low
 
   * New upstream release.
