--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rdma-core (45.1-1) unstable; urgency=low
+
+  * New upstream release.
+
+ -- Nicolas Morey <nmorey@suse.com>  Fri, 09 Jun 2023 11:52:09 +0200
+
 rdma-core (45.0-1) unstable; urgency=medium
 
   * New upstream release.
