--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rdma-core (36.8-1) unstable; urgency=low
+
+  * New upstream release.
+
+ -- Nicolas Morey <nmorey@suse.com>  Tue, 18 Jul 2023 10:06:48 +0200
+
 rdma-core (36.7-1) unstable; urgency=low
 
   * New upstream release.
