--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rdma-core (39.5-1) unstable; urgency=low
+
+  * New upstream release.
+
+ -- Nicolas Morey <nmorey@suse.com>  Tue, 18 Jul 2023 10:06:51 +0200
+
 rdma-core (39.4-1) unstable; urgency=low
 
   * New upstream release.
