mlx5: Add atomic/rdma read for DC comp mask to man page
[ Upstream commit 98dd40bf36f7549fc190ac4dd13b20955f3ccd15 ]

The cited commit didn't update the man page with the comp mask the user
needs to provide in order to get the atomic / rdma read for DC QPs.

Fixes: 450a398590dd ("mlx5: Expose max remote atomic/rdma read for DC")
Signed-off-by: Mark Bloch <mbloch@nvidia.com>
Signed-off-by: Yishai Hadas <yishaih@nvidia.com>
Signed-off-by: Nicolas Morey <nmorey@suse.com>

--- a/providers/mlx5/man/mlx5dv_query_device.3
+++ b/providers/mlx5/man/mlx5dv_query_device.3
@@ -104,6 +104,7 @@ MLX5DV_CONTEXT_MASK_SIGNATURE_OFFLOAD   = 1 << 10,
 MLX5DV_CONTEXT_MASK_DCI_STREAMS         = 1 << 11,
 MLX5DV_CONTEXT_MASK_WR_MEMCPY_LENGTH    = 1 << 12,
 MLX5DV_CONTEXT_MASK_CRYPTO_OFFLOAD      = 1 << 13,
+MLX5DV_CONTEXT_MASK_MAX_DC_RD_ATOM      = 1 << 14,
 .in -8
 };
 
